--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Register BottleBomb</h1>
+        <h1>Register BottleBomb v2</h1>
         <form id="userForm">
             <label for="userId">User ID:</label>
             <input type="text" id="userId" name="userId" readonly placeholder="Loading...">
@@ -133,7 +133,7 @@
             const studentId = document.getElementById("studentId").value;
             const phoneNumber = document.getElementById("phoneNumber").value;
 
-            const url = "https://script.google.com/macros/s/AKfycbxSfRvbYs91eaiy_HzYZ9n9P7cHnyprvJ4KoSOeqCuDb7aXEn5SrJULURXQxKFGtkQVtw/exec";
+            const url = "https://script.google.com/macros/s/AKfycbzC6GxBt55NBfZ2VSSo2VxwNLXw3TdAQYkH9hb-adL4amr3fju4L9hqq7XgBym3edV2Lw/exec";
             const params = new URLSearchParams({
                 userId: userId,
                 firstName: firstName,
