--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             const studentId = document.getElementById("studentId").value;
             const phoneNumber = document.getElementById("phoneNumber").value;
 
-            const url = "https://script.google.com/macros/s/AKfycbzYsohdg-u7XPizSurttX5V1MCsot2tO-i7ye5_3fqF4BXBJhJe9XorH9G0kBg71tnc2g/exec";
+            const url = "https://script.google.com/macros/s/AKfycbxEv11MyR__r4u5x-n2-FgGcPYyG1PZiieZ6J5CYSVTtMwpOC72MpGC8noyYxno5Rv6yw/exec";
             const params = new URLSearchParams({
                 userId: userId,
                 firstName: firstName,
@@ -154,15 +154,17 @@
             .then(data => {
                 console.log("Response:", data);
                 if (data.status === "success") {
-                    alert("Registration successful: " + data.message);
+                    alert("Registration successful");
                     liff.closeWindow(); // ปิด LIFF หลังจากลงทะเบียนสำเร็จ
                 } else {
-                    alert("Error: " + data.message);
+                    //alert("Error: " + data.message);
+                    liff.closeWindow(); // ปิด LIFF หลังจากลงทะเบียนสำเร็จ
                 }
             })
             .catch(error => {
                 console.error("Error:", error);
-                alert("Error in sending data: " + error.message);
+                //alert("Error in sending data: " + error.message);
+                liff.closeWindow(); // ปิด LIFF หลังจากลงทะเบียนสำเร็จ
             });
         }
 
